[gd_scene load_steps=8 format=3 uid="uid://ekhpeypfotcs"]

[ext_resource type="Script" uid="uid://dxlrs02qak46y" path="res://scripts/boss.gd" id="1_dlmty"]
[ext_resource type="Texture2D" uid="uid://dp1w4whajo30v" path="res://art/golem.png" id="2_neq0i"]
[ext_resource type="Script" uid="uid://byjx0xntnx6jr" path="res://scripts/punch_warning.gd" id="3_jncid"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jncid"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qnbj4"]
radius = 43.0

[sub_resource type="CircleShape2D" id="CircleShape2D_r3bxh"]
radius = 157.18

[sub_resource type="CircleShape2D" id="CircleShape2D_wqpjq"]
radius = 136.78

[node name="Node2D" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_dlmty")

[node name="RockSpawn" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jncid")
animation = &"new_animation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("CircleShape2D_qnbj4")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_r3bxh")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_wqpjq")

[node name="Timer(AttDelay)" type="Timer" parent="."]

[node name="Timer(PunchDelay)" type="Timer" parent="."]
wait_time = 2.0

[node name="Golem" type="Sprite2D" parent="."]
position = Vector2(0, -1.9073486e-06)
scale = Vector2(0.25625, 0.25625)
texture = ExtResource("2_neq0i")

[node name="PunchWarning" type="Node2D" parent="."]
script = ExtResource("3_jncid")

[node name="iframes" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
